# ave-tesk-task

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: container.py  main.py
app/api/v1/contacts/: router.py  schemas.py
app/repositories/: contact_redis.py  contact_repository.py
tests/: conftest.py  test_contacts.py
