[tool.poetry]
name = "ave rest"
version = "0.1.0"
description = "Тестовое задание для Ave Technologies"
authors = ["Vladimir Silin <sva@itx24.ru>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.124.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
redis = "^7.1.0"
pydantic-extra-types = "^2.10.6"
phonenumbers = "^9.0.20"
dishka = "^1.7.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.12.0"
isort = "^7.0.0"
pytest = "^9.0.2"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
